added vcard and map functionallity

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <title>AlliantCRM</title>
   <base href="/">
 
-  <link rel="icon" type="image/x-icon" href="/src/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/src/images/Alliant_National_Logo4.png">
 </head>
 
 <body>
